-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7u80, 8u60, 9
-
Component/s: hotspot
-
Environment:
Linux/Sparc on M7/T7 platform
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8141930 | emb-9 | Gerald Thornbrugh | P3 | Resolved | Fixed | team |
| JDK-8140841 | 8u91 | Gerald Thornbrugh | P3 | Resolved | Fixed | b01 |
| JDK-8147148 | emb-8u91 | Gerald Thornbrugh | P3 | Resolved | Fixed | b01 |
The JVM is creating too many GC helper threads on the T7/M7 platform because hotspot does not correctly set the CPU features for the platform.
The "CPU" line in the /proc/cpuinfo file for a T5 looks like this:
cpu : UltraSparc T5 (Niagara5)
Hotspot interprets the "Niagara" and sets Niagara related features.
The "CPU" line in the /proc/cpuinfo file for a T7/M7 looks like this:
cpu : SPARC-M7
Since the current linux/sparc hotspot code does not recognize "SPARC-M7" it used the default number of GC helper threads that is twice what it should be. The linux/sparc hotspot code should recognize the "SPARC-M7" cpu description and set M family related features.
The "CPU" line in the /proc/cpuinfo file for a T5 looks like this:
cpu : UltraSparc T5 (Niagara5)
Hotspot interprets the "Niagara" and sets Niagara related features.
The "CPU" line in the /proc/cpuinfo file for a T7/M7 looks like this:
cpu : SPARC-M7
Since the current linux/sparc hotspot code does not recognize "SPARC-M7" it used the default number of GC helper threads that is twice what it should be. The linux/sparc hotspot code should recognize the "SPARC-M7" cpu description and set M family related features.
- backported by
-
JDK-8140841 JVM is creating too many GC helper threads on T7/M7 linux/sparc platform
-
- Resolved
-
-
JDK-8141930 JVM is creating too many GC helper threads on T7/M7 linux/sparc platform
-
- Resolved
-
-
JDK-8147148 JVM is creating too many GC helper threads on T7/M7 linux/sparc platform
-
- Resolved
-