8134161: JVM is creating too many GC helper threads on T7/M7 linux/sparc platform

Recognize the T7/M7 platform.

Reviewed-by: dcubed, kvn, jmasa